# serializer version: 1
# name: test_number[number.my_pv_ac_elwa_2_boost_target_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.my_pv_ac_elwa_2_boost_target_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Boost Target Temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Boost Target Temperature',
    'platform': 'my_pv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ww1boost',
    'unique_id': '1601500000000000-bsttemp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_boost_target_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-PV AC ELWA 2 Boost Target Temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pv_ac_elwa_2_boost_target_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55.0',
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_boost_target_temperature_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.my_pv_ac_elwa_2_boost_target_temperature_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Boost Target Temperature',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Boost Target Temperature',
    'platform': 'my_pv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ww1boost',
    'unique_id': '1601500000000000-ww1boost',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_boost_target_temperature_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-PV AC ELWA 2 Boost Target Temperature',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 5.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pv_ac_elwa_2_boost_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '65.0',
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_maximum_hysteresis-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 9.9,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pv_ac_elwa_2_maximum_hysteresis',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Maximum Hysteresis',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Maximum Hysteresis',
    'platform': 'my_pv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ww_targ_h',
    'unique_id': '1601500000000000-ww_targ_h',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_maximum_hysteresis-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-PV AC ELWA 2 Maximum Hysteresis',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 9.9,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pv_ac_elwa_2_maximum_hysteresis',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.5',
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_minimum_hysteresis-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 9.9,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.my_pv_ac_elwa_2_minimum_hysteresis',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Minimum Hysteresis',
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE_DELTA: 'temperature_delta'>,
    'original_icon': None,
    'original_name': 'Minimum Hysteresis',
    'platform': 'my_pv',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ww_boost_h',
    'unique_id': '1601500000000000-ww_boost_h',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_number[number.my_pv_ac_elwa_2_minimum_hysteresis-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature_delta',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'my-PV AC ELWA 2 Minimum Hysteresis',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 9.9,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.1,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.my_pv_ac_elwa_2_minimum_hysteresis',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.5',
  })
# ---
